// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransferReviewCard renders correctly for invite review 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "flex-start",
      "paddingBottom": 25,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "column",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "alignSelf": "center",
            "margin": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#7AD6FE",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
            }
          }
          style={
            Array [
              Object {
                "alignSelf": "center",
                "margin": "auto",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
    </View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "marginHorizontal": 20,
            "paddingTop": 6,
            "textAlign": "center",
          },
        ]
      }
    >
      walletAddress
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "fontFamily": "Hind-Light",
          },
          Object {
            "marginHorizontal": 20,
            "paddingTop": 6,
            "textAlign": "center",
          },
        ]
      }
    >
      #0x0000000000000000000000000000000000007E57
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "alignSelf": "center",
          "flexDirection": "row",
          "marginTop": 5,
        },
        Object {
          "marginTop": 15,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "color": undefined,
            "fontSize": 34,
          },
        ]
      }
    >
      
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "color": undefined,
            "fontSize": 24,
          },
        ]
      }
    >
      $
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
            "paddingHorizontal": 3,
          },
          Object {
            "color": undefined,
            "fontSize": 48,
            "lineHeight": 64,
          },
        ]
      }
    >
      133.00
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "column",
        "marginTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "borderStyle": "solid",
          "borderTopColor": "#EEEEEE",
          "borderTopWidth": 1,
          "marginBottom": 15,
          "marginTop": 10,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 5,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginRight": 5,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 15,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          global:subtotal
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 15,
              "lineHeight": 24,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              undefined,
              Object {
                "color": undefined,
              },
            ]
          }
        >
          
          $
          133.00
        </Text>
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 5,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginRight": 5,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 15,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          inviteFee
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 15,
              "lineHeight": 24,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              undefined,
              Object {
                "color": undefined,
              },
            ]
          }
        >
          
          $
          0.33
        </Text>
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 5,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginRight": 5,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 15,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          securityFee
        </Text>
        <View
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackgroundBorderless",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "flex-end",
              "paddingHorizontal": 5,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../packages/mobile/src/images/info.png",
              }
            }
            style={
              Object {
                "height": 12,
                "tintColor": "#BDBDBD",
                "width": 12,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "borderStyle": "solid",
          "borderTopColor": "#EEEEEE",
          "borderTopWidth": 1,
          "marginBottom": 15,
          "marginTop": 10,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 5,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginRight": 5,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 15,
                "lineHeight": 24,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              },
            ]
          }
        >
          total
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 15,
              "lineHeight": 24,
            },
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              undefined,
              Object {
                "color": undefined,
              },
            ]
          }
        >
          
          $
          133.00
        </Text>
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 5,
          },
          Object {
            "marginVertical": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginRight": 5,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 15,
                "lineHeight": 24,
              },
              Object {
                "color": "#81868B",
              },
            ]
          }
        >
          Celo Dollars (@
           
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            
            $
            0.75
          </Text>
          )
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 15,
              "lineHeight": 24,
            },
            Object {
              "color": "#81868B",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              undefined,
              Object {
                "color": undefined,
              },
            ]
          }
        >
          
          100.00
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`TransferReviewCard renders correctly for pay request review 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "flex-start",
      "paddingBottom": 25,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "column",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "alignSelf": "center",
            "margin": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#7AD6FE",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
            }
          }
          style={
            Array [
              Object {
                "alignSelf": "center",
                "margin": "auto",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
    </View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "marginHorizontal": 20,
            "paddingTop": 6,
            "textAlign": "center",
          },
        ]
      }
    >
      mobileNumber
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Light",
              "fontSize": 14,
              "textAlignVertical": "center",
            },
            Object {
              "alignItems": "center",
              "backgroundColor": "#EEEEEE",
              "borderRadius": 3,
              "justifyContent": "center",
              "marginRight": 5,
              "paddingLeft": 6,
              "paddingRight": 3,
            },
          ]
        }
      >
        🇺🇸 +1
      </Text>
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Light",
            "fontSize": 14,
            "textAlignVertical": "center",
          }
        }
      >
        (415) 555-0000
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "alignSelf": "center",
          "flexDirection": "row",
          "marginTop": 5,
        },
        Object {
          "marginTop": 15,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "color": undefined,
            "fontSize": 34,
          },
        ]
      }
    >
      
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "color": undefined,
            "fontSize": 24,
          },
        ]
      }
    >
      $
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
            "paddingHorizontal": 3,
          },
          Object {
            "color": undefined,
            "fontSize": 48,
            "lineHeight": 64,
          },
        ]
      }
    >
      133.00
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "column",
        "marginTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "borderStyle": "solid",
          "borderTopColor": "#EEEEEE",
          "borderTopWidth": 1,
          "marginBottom": 15,
          "marginTop": 10,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 5,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginRight": 5,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 15,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          global:subtotal
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 15,
              "lineHeight": 24,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              undefined,
              Object {
                "color": undefined,
              },
            ]
          }
        >
          
          $
          133.00
        </Text>
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 5,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginRight": 5,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 15,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          securityFee
        </Text>
        <View
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackgroundBorderless",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "flex-end",
              "paddingHorizontal": 5,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../packages/mobile/src/images/info.png",
              }
            }
            style={
              Object {
                "height": 12,
                "tintColor": "#BDBDBD",
                "width": 12,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "borderStyle": "solid",
          "borderTopColor": "#EEEEEE",
          "borderTopWidth": 1,
          "marginBottom": 15,
          "marginTop": 10,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 5,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginRight": 5,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 15,
                "lineHeight": 24,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              },
            ]
          }
        >
          total
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 15,
              "lineHeight": 24,
            },
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              undefined,
              Object {
                "color": undefined,
              },
            ]
          }
        >
          
          $
          133.00
        </Text>
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 5,
          },
          Object {
            "marginVertical": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginRight": 5,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 15,
                "lineHeight": 24,
              },
              Object {
                "color": "#81868B",
              },
            ]
          }
        >
          Celo Dollars (@
           
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            
            $
            0.75
          </Text>
          )
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 15,
              "lineHeight": 24,
            },
            Object {
              "color": "#81868B",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              undefined,
              Object {
                "color": undefined,
              },
            ]
          }
        >
          
          100.00
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`TransferReviewCard renders correctly for send review 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "flex-start",
      "paddingBottom": 25,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "column",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "alignSelf": "center",
            "margin": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#7AD6FE",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
            }
          }
          style={
            Array [
              Object {
                "alignSelf": "center",
                "margin": "auto",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
    </View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "marginHorizontal": 20,
            "paddingTop": 6,
            "textAlign": "center",
          },
        ]
      }
    >
      walletAddress
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "fontFamily": "Hind-Light",
          },
          Object {
            "marginHorizontal": 20,
            "paddingTop": 6,
            "textAlign": "center",
          },
        ]
      }
    >
      #0x0000000000000000000000000000000000007E57
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "alignSelf": "center",
          "flexDirection": "row",
          "marginTop": 5,
        },
        Object {
          "marginTop": 15,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "color": undefined,
            "fontSize": 34,
          },
        ]
      }
    >
      
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "color": undefined,
            "fontSize": 24,
          },
        ]
      }
    >
      $
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
            "paddingHorizontal": 3,
          },
          Object {
            "color": undefined,
            "fontSize": 48,
            "lineHeight": 64,
          },
        ]
      }
    >
      0.39
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "column",
        "marginTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "borderStyle": "solid",
          "borderTopColor": "#EEEEEE",
          "borderTopWidth": 1,
          "marginBottom": 15,
          "marginTop": 10,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 5,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginRight": 5,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 15,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          global:subtotal
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 15,
              "lineHeight": 24,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              undefined,
              Object {
                "color": undefined,
              },
            ]
          }
        >
          
          $
          0.39
        </Text>
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 5,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginRight": 5,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 15,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          securityFee
        </Text>
        <View
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackgroundBorderless",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "flex-end",
              "paddingHorizontal": 5,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../packages/mobile/src/images/info.png",
              }
            }
            style={
              Object {
                "height": 12,
                "tintColor": "#BDBDBD",
                "width": 12,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "borderStyle": "solid",
          "borderTopColor": "#EEEEEE",
          "borderTopWidth": 1,
          "marginBottom": 15,
          "marginTop": 10,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 5,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginRight": 5,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 15,
                "lineHeight": 24,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              },
            ]
          }
        >
          total
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 15,
              "lineHeight": 24,
            },
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              undefined,
              Object {
                "color": undefined,
              },
            ]
          }
        >
          
          $
          0.39
        </Text>
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 5,
          },
          Object {
            "marginVertical": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginRight": 5,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 15,
                "lineHeight": 24,
              },
              Object {
                "color": "#81868B",
              },
            ]
          }
        >
          Celo Dollars (@
           
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            
            $
            0.75
          </Text>
          )
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 15,
              "lineHeight": 24,
            },
            Object {
              "color": "#81868B",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              undefined,
              Object {
                "color": undefined,
              },
            ]
          }
        >
          
          0.30
        </Text>
      </Text>
    </View>
  </View>
</View>
`;
